add system_analyer api etc.

--- a/AortaTools/csrc/CMakeLists.txt
+++ b/AortaTools/csrc/CMakeLists.txt
@@ -14,23 +14,14 @@ if (UNIX)
 endif(UNIX)
 
 # aorta dll library
-add_library(md_aorta_sys SHARED api.cpp api.h ${SYSTEM_FILES}
+add_library(md_aorta_sys STATIC ${SYSTEM_FILES}
             ${MD_IMAGE3D_SRC} ${MD_UTILITY_SRC} 
 			${MD_LOGGING_SRC} ${MD_IMAGE3D_ITK_SRC})
 			
-target_link_libraries(md_aorta_sys ${ITK_LIBRARIES}} glog::glog)
+target_link_libraries(md_aorta_sys ${ITK_LIBRARIES} glog::glog)
 
-if (UNIX)
-  set(MD_AORTA_SYS_RPATH "$ORIGIN/../Dependency" "$ORIGIN")
-  set_target_properties(md_aorta_sys PROPERTIES INSTALL_RPATH "${MD_AORTA_SYS_RPATH}")
-endif(UNIX)
-
-
-add_executable(md_aorta_sys_test api.h api.cpp api_test.cpp utils/test_helpers.h utils/test_helpers.cpp 
+add_executable(md_aorta_sys_test api.h api.cpp api_test.cpp 
                ${MD_IMAGE3D_ITK_SRC} ${MD_UTILITY_SRC})
 target_link_libraries(md_aorta_sys_test md_aorta_sys ${ITK_LIBRARIES} glog::glog)
 
-if (UNIX)
-  set_target_properties(md_aorta_sys_test PROPERTIES INSTALL_RPATH "$ORIGIN")
-endif(UNIX)
 
